--- a/config/database.yml
+++ b/config/database.yml
@@ -19,13 +19,16 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
+  username: <% ENV['USERNAME'] %>
+  password: <% ENV['PASSWORD'] %>
+  host: <% ENV['IP'] %>
   pool: 5
+  
 
 development:
   <<: *default
   database: missionedimilano_development
-  username: postgres
-  password: secret
+
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +63,7 @@ development:
 test:
   <<: *default
   database: missionedimilano_test
-  username: postgres
-  password: secret
+
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
